갤러리 리스트 크롤링 추가

--- a/HitomiSharp/HitomiSharp.csproj
+++ b/HitomiSharp/HitomiSharp.csproj
@@ -8,4 +8,8 @@
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+  </ItemGroup>
+
 </Project>
