--- a/HitomiSharp.Tests/HitomiSharp.Tests.csproj
+++ b/HitomiSharp.Tests/HitomiSharp.Tests.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="HitomiTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchOptionTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HitomiSharp\HitomiSharp.csproj">
