--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ before_build:
 build:
   verbosity: minimal
 test_script:
-- OpenCover.Console.exe -register:user -target:"C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\IDE\CommonExtensions\Microsoft\TestWindow\vstest.console.exe" -targetargs:"/logger:Appveyor HitomiSharp.Tests\bin\Debug\HitomiSharp.Tests.dll" -output:"coverage.xml" -filter:"+[HitomiSharp*]* -[HitomiSharp.Tests*]*"
+- OpenCover.Console.exe -register:user -target:"C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\IDE\CommonExtensions\Microsoft\TestWindow\vstest.console.exe" -targetargs:"HitomiSharp.Tests\bin\Debug\HitomiSharp.Tests.dll" -output:"coverage.xml" -filter:"+[HitomiSharp*]* -[HitomiSharp.Tests*]*"
 # - cmd: vstest.console /logger:Appveyor HitomiSharp.Tests\bin\Debug\HitomiSharp.Tests.dll
 after_test:
   - ps: |
